# gl0c

./: CMakeLists.txt  README.md
src/: gl0c.cpp
src/assets/: fragment_shader.glsl  vertex_shader.glsl
src/component/: GL0cComponent.cpp  GL0cComponent.h  GL0cControl.cpp  GL0cControl.h
src/entity/: GL0cCamera.cpp  GL0cCamera.h  GL0cEntity.cpp  GL0cEntity.h
src/renderer/input/: GL0cArrayBuffer.cpp  GL0cArrayBuffer.h  GL0cIndexBuffer.cpp  GL0cIndexBuffer.h  GL0cVertexArray.cpp  GL0cVertexArray.h  GL0cVertexBuffer.cpp  GL0cVertexBuffer.h
src/renderer/program/: GL0cProgram.cpp  GL0cProgram.h  GL0cRenderer.cpp  GL0cRenderer.h  GL0cShader.cpp  GL0cShader.h
src/renderer/structs/: GL0cVertex.h
src/system/: GL0cContext.cpp  GL0cContext.h  GL0cSystem.cpp  GL0cSystem.h
src/utils/: GL0cFunc.cpp  GL0cFunc.h
